LPS-186272 Prevent text from text-truncate removal

--- a/modules/apps/layout/layout-admin-web/src/main/resources/META-INF/resources/css/miller_columns/_MillerColumns.scss
+++ b/modules/apps/layout/layout-admin-web/src/main/resources/META-INF/resources/css/miller_columns/_MillerColumns.scss
@@ -30,7 +30,7 @@
 .miller-columns-item {
 	border-bottom: 1px solid $gray-300;
 	cursor: pointer;
-	height: 4rem;
+	min-height: 4rem;
 	padding: 1rem;
 	position: relative;
 
